--- a/index.css
+++ b/index.css
@@ -203,7 +203,7 @@ body.dark .flip-card-front {
 /* Back cards */
 .flip-card-back {
   transform: rotateY(180deg);
-  color: white;
+  color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
