--- a/register.css
+++ b/register.css
@@ -80,7 +80,7 @@ nav{
 .logo {
   font-size: 2.3rem;
   font-weight: 800;
-  background: linear-gradient(135deg, #667eea, #e91e63);
+  background: linear-gradient(135deg, #2652c0, #1ee9c0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -100,7 +100,7 @@ nav{
   display: block;
   height: 4px;       /* Thickness of the lines */
   width: 100%;
-  background-color: #4a5bf5; /* Line color */
+  background: linear-gradient(135deg, #2652c0, #1ee9c0); /* Line color */
   border-radius: 2px;        /* Rounded edges */
   transition: all 0.3s ease; /* Smooth animation */
 }
@@ -208,12 +208,12 @@ body.light .mobile-menu {
 }
 
 #loginBtn{ 
-  background: #667eea;
+  background: linear-gradient(135deg, #2652c0, #1ee9c0);
   color: white; 
 }
 
 #registerBtn{ 
-  background: #e91e63;
+ background: linear-gradient(135deg, #2652c0, #1ee9c0);
   color: white; 
 }
 
@@ -243,13 +243,13 @@ section {
 }
 
 #register-btn{
-  background: linear-gradient(135deg, #667eea, #e91e63);
+  background: linear-gradient(135deg, #2652c0, #1ee9c0);
 }
 
 h1 {
   font-size: 3.9rem;
   font-weight: 800;
-  background: linear-gradient(135deg, #667eea, #e91e63);
+ background: linear-gradient(135deg, #2652c0, #1ee9c0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -320,7 +320,7 @@ body.dark .flip-card-front{
 }
 
 .flip-card-back {
-  background: linear-gradient(135deg, #667eea, #764ba2);
+background: linear-gradient(135deg, #2652c0, #1ee9c0);
   color: white;
   transform: rotateY(180deg);
 }
@@ -384,7 +384,7 @@ input:focus, textarea:focus {
 .submit-btn {
   width: 100%;
   padding: 1.4rem;
-  background: linear-gradient(135deg, #667eea, #e91e63);
+  background: linear-gradient(135deg, #2652c0, #1ee9c0);
   color: white;
   border: none;
   border-radius: 14px;
@@ -406,7 +406,7 @@ footer {
   width: 100%;
   padding: 3.5rem 1rem;
   text-align: center;
-  background: linear-gradient(135deg, #667eea, #764ba2);
+  background: linear-gradient(135deg, #2652c0, #1ee9c0);
   color: white;
   font-size: 1.05rem;
   font-weight: 500;
