--- a/register.css
+++ b/register.css
@@ -90,7 +90,7 @@ nav{
 .hamburger {
   width: 35px;       /* Width of the icon */
   height: 30px;      /* Height of the icon */
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between; /* space between lines */
   cursor: pointer;
@@ -205,6 +205,7 @@ body.light .mobile-menu {
   cursor: pointer;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.22);
+  background: linear-gradient(135deg, #2652c0, #1ee9c0);
 }
 
 #loginBtn{ 
@@ -219,7 +220,7 @@ body.light .mobile-menu {
 
 #themeToggle{ 
   background: none;
-  border: transparent;
+  border: black;
   box-shadow: none;
   font-size: 1.9rem;
   padding: 0.4rem;
