--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@
 
 html, body {
   height: 100%;
-  font-family: 'Poppins', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
   display: flex;
   flex-direction: column;
 }
@@ -73,7 +74,11 @@ body.dark .nav-container {
 }
 
 .auth-buttons button {
-  padding: 8px 16px;
+  padding: 8px 16px ;
+  margin-right: 10px;
+  height: 40px;
+  text-transform: uppercase;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border: none;
   border-radius: 25px;
   font-weight: 600;
