--- a/about.css
+++ b/about.css
@@ -224,19 +224,24 @@ input:checked + .slider:before {
   display: none;
   width: 35px;
   height: 30px;
+
   flex-direction: column;
   justify-content: space-between;
+
   background: none;
   border: none;
   cursor: pointer;
-  margin-left: auto;
+
+  margin-left: auto; 
+
   z-index: 1001;
 }
 
 .hamburger span {
-  display: block;
+  display: flex;
   height: 4px;
   width: 100%;
+  justify-content: space-between;
   background-color: #2652c0;
   border-radius: 2px;
   transition: all 0.3s ease;
