--- a/login.css
+++ b/login.css
@@ -40,7 +40,7 @@ main {
   min-height: calc(100vh - 200px);
 }
 
-/* ==================== 2. Navbar (EXACTLY LIKE YOUR REGISTER PAGE) ==================== */
+/* ==================== 2. Navbar  ==================== */
 .nav-container {
   position: fixed;
   top: 0;
@@ -227,20 +227,24 @@ input:checked + .slider:before {
   display: none;
   width: 35px;
   height: 30px;
+
   flex-direction: column;
   justify-content: space-between;
-  cursor: pointer;
+
   background: none;
   border: none;
-  padding: 0;
-  margin-left: 20px;
+  cursor: pointer;
+
+  margin-left: auto; 
+
   z-index: 1001;
 }
 
 .hamburger span {
-  display: block;
+  display: flex;
   height: 4px;
   width: 100%;
+  justify-content: space-between;
   background-color: #2652c0;
   border-radius: 2px;
   transition: all 0.3s ease;
